src/bindings.rs

pub const heif_color_profile_type_heif_color_profile_type_not_present: heif_color_profile_type = 0;
pub const heif_color_profile_type_heif_color_profile_type_nclx: heif_color_profile_type =
    1852009592;
pub const heif_color_profile_type_heif_color_profile_type_rICC: heif_color_profile_type =
    1917403971;
pub const heif_color_profile_type_heif_color_profile_type_prof: heif_color_profile_type =
    1886547814;
pub type heif_color_profile_type = u32;
extern "C" {
    pub fn heif_image_handle_get_color_profile_type(
        handle: *const heif_image_handle,
    ) -> heif_color_profile_type;
}
extern "C" {
    pub fn heif_image_handle_get_raw_color_profile_size(handle: *const heif_image_handle) -> usize;
}
extern "C" {
    pub fn heif_image_handle_get_raw_color_profile(
        handle: *const heif_image_handle,
        out_data: *mut libc::c_void,
    ) -> heif_error;
}
pub const heif_color_primaries_heif_color_primaries_ITU_R_BT_709_5: heif_color_primaries = 1;
pub const heif_color_primaries_heif_color_primaries_unspecified: heif_color_primaries = 2;
pub const heif_color_primaries_heif_color_primaries_ITU_R_BT_470_6_System_M: heif_color_primaries =
    4;
pub const heif_color_primaries_heif_color_primaries_ITU_R_BT_470_6_System_B_G:
    heif_color_primaries = 5;
pub const heif_color_primaries_heif_color_primaries_ITU_R_BT_601_6: heif_color_primaries = 6;
pub const heif_color_primaries_heif_color_primaries_SMPTE_240M: heif_color_primaries = 7;
pub type heif_color_primaries = u32;
pub const heif_transfer_characteristics_heif_transfer_characteristic_ITU_R_BT_709_5:
    heif_transfer_characteristics = 1;
pub const heif_transfer_characteristics_heif_transfer_characteristic_unspecified:
    heif_transfer_characteristics = 2;
pub const heif_transfer_characteristics_heif_transfer_characteristic_ITU_R_BT_470_6_System_M:
    heif_transfer_characteristics = 4;
pub const heif_transfer_characteristics_heif_transfer_characteristic_ITU_R_BT_470_6_System_B_G:
    heif_transfer_characteristics = 5;
pub const heif_transfer_characteristics_heif_transfer_characteristic_ITU_R_BT_601_6:
    heif_transfer_characteristics = 6;
pub const heif_transfer_characteristics_heif_transfer_characteristic_SMPTE_240M:
    heif_transfer_characteristics = 7;
pub const heif_transfer_characteristics_heif_transfer_characteristic_linear:
    heif_transfer_characteristics = 8;
pub const heif_transfer_characteristics_heif_transfer_characteristic_IEC_61966_2_4:
    heif_transfer_characteristics = 11;
pub const heif_transfer_characteristics_heif_transfer_characteristic_ITU_R_BT_1361:
    heif_transfer_characteristics = 12;
pub const heif_transfer_characteristics_heif_transfer_characteristic_IEC_61966_2_1:
    heif_transfer_characteristics = 13;
pub type heif_transfer_characteristics = u32;
pub const heif_matrix_coefficients_heif_matrix_coefficients_RGB_GBR: heif_matrix_coefficients = 0;
pub const heif_matrix_coefficients_heif_matrix_coefficients_ITU_R_BT_709_5:
    heif_matrix_coefficients = 1;
pub const heif_matrix_coefficients_heif_matrix_coefficients_unspecified: heif_matrix_coefficients =
    2;
pub const heif_matrix_coefficients_heif_matrix_coefficients_US_FCC_T47: heif_matrix_coefficients =
    4;
pub const heif_matrix_coefficients_heif_matrix_coefficients_ITU_R_BT_470_6_System_B_G:
    heif_matrix_coefficients = 5;
pub const heif_matrix_coefficients_heif_matrix_coefficients_ITU_R_BT_601_6:
    heif_matrix_coefficients = 6;
pub const heif_matrix_coefficients_heif_matrix_coefficients_SMPTE_240M: heif_matrix_coefficients =
    7;
pub const heif_matrix_coefficients_heif_matrix_coefficients_YCgCo: heif_matrix_coefficients = 8;
pub type heif_matrix_coefficients = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct heif_color_profile_nclx {
    pub version: u8,
    pub color_primaries: heif_color_primaries,
    pub transfer_characteristics: heif_transfer_characteristics,
    pub matrix_coefficients: heif_matrix_coefficients,
    pub full_range_flag: u8,
    pub color_primary_red_x: f32,
    pub color_primary_red_y: f32,
    pub color_primary_green_x: f32,
    pub color_primary_green_y: f32,
    pub color_primary_blue_x: f32,
    pub color_primary_blue_y: f32,
    pub color_primary_white_x: f32,
    pub color_primary_white_y: f32,
}
#[test]
fn bindgen_test_layout_heif_color_profile_nclx() {
    assert_eq!(
        ::core::mem::size_of::<heif_color_profile_nclx>(),
        52usize,
        concat!("Size of: ", stringify!(heif_color_profile_nclx))
    );
    assert_eq!(
        ::core::mem::align_of::<heif_color_profile_nclx>(),
        4usize,
        concat!("Alignment of ", stringify!(heif_color_profile_nclx))
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).version as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primaries as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primaries)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).transfer_characteristics
                as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(transfer_characteristics)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).matrix_coefficients as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(matrix_coefficients)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).full_range_flag as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(full_range_flag)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_red_x as *const _
                as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_red_x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_red_y as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_red_y)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_green_x as *const _
                as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_green_x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_green_y as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_green_y)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_blue_x as *const _
                as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_blue_x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_blue_y as *const _
                as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_blue_y)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_white_x as *const _
                as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_white_x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<heif_color_profile_nclx>())).color_primary_white_y as *const _
                as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(heif_color_profile_nclx),
            "::",
            stringify!(color_primary_white_y)
        )
    );
}
extern "C" {
    pub fn heif_image_handle_get_nclx_color_profile(
        handle: *const heif_image_handle,
        out_data: *mut *mut heif_color_profile_nclx,
    ) -> heif_error;
}
extern "C" {
    pub fn heif_image_get_color_profile_type(image: *const heif_image) -> heif_color_profile_type;
}
extern "C" {
    pub fn heif_image_get_raw_color_profile_size(image: *const heif_image) -> usize;
}
extern "C" {
    pub fn heif_image_get_raw_color_profile(
        image: *const heif_image,
        out_data: *mut libc::c_void,
    ) -> heif_error;
}
extern "C" {
    pub fn heif_image_get_nclx_color_profile(
        image: *const heif_image,
        out_data: *mut *mut heif_color_profile_nclx,
    ) -> heif_error;
}
